# Image_to_triangles

./: CMakeLists.txt  Stuff_to_be_done.txt  image_data.c  image_data.h  main.c  triangle_data.c  triangle_data.h
